@@ -4,6 +4,7 @@ v1.5.2 - Pending
 	+ Bug: Fix artwork for files with unicode characters
 	+ Bug: Fix crash if mpd library is empty
 	+ Bug: Fix artwork display in song notification window for RTL languages
+	+ Bug: Fix progressbar seeking for RTL languages
 	+ Bug: Fix regression where dbus-python became required
 	+ Bug: No play/pause indicator in systray icon if started while mpd is active
 
